# Transformers_Are_World_models

./: .gitignore  README.md  context.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
configs/: carracing.yaml  takecover.yaml
scripts/: collect_rollouts.py  eval_controller.py  train_controller_cmaes.py  train_vit_wm.py
tests/: conftest.py  test_cmaes.py  test_dream_env.py  test_losses.py  test_paper_performance.py  test_vit_wm.py
wm/: __init__.py
wm/controller/: __init__.py  linear.py  runner.py
wm/data/: __init__.py  episode.py  index.py  sampling.py
wm/envs/: __init__.py  carracing.py  dream.py  gym_compat.py  rollout.py  vizdoom_takecover.py
wm/es/: __init__.py  cmaes.py
wm/losses/: __init__.py  mdn.py  vae.py
wm/models/: __init__.py  decoder.py  transformer.py  vit_wm.py
wm/utils/: __init__.py  checkpoint.py  config.py  device.py  logging.py  seeding.py
