[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-wm"
version = "0.1.0"
description = "Single-backbone ViT world model (V+M) with linear CMA-ES controller (C)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "torchvision>=0.16",
  "einops>=0.7",
  "omegaconf>=2.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

